--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10,3 +10,11 @@
     border-radius: 5px !important;
     font-weight:700 ;
 }
+
+
+.ag-chart-toolbar {
+    height: 150% !important; /* Adjust based on your needs */
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
