--- a/src/assets/css/DashboardLayoutPages.css
+++ b/src/assets/css/DashboardLayoutPages.css
@@ -8,3 +8,11 @@
     left: 280px !important;
     top: 10px !important;
 }
+
+.css-wqnpph {
+    display: flex !important;
+    flex-direction: row !important;
+    position: relative !important;
+    right: 100px !important;
+    top: 5px !important;
+}
