--- a/src/assets/css/Reusablecomponents/CircularIntegration.css
+++ b/src/assets/css/Reusablecomponents/CircularIntegration.css
@@ -2,3 +2,11 @@
     background: transparent !important;
     box-shadow: none !important;
 }
+
+.css-wqnpph {
+    display: flex !important;
+    flex-direction: row !important;
+    position: relative !important;
+    right: 100px !important;
+    top: 5px !important;
+}
