--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -18,3 +18,12 @@
     align-items: center;
     justify-content: flex-start;
   }
+
+
+.css-wqnpph {
+    display: flex !important;
+    flex-direction: row !important;
+    position: relative !important;
+    right: 100px !important;
+    top: 5px !important;
+}
